--- a/cancion/vista4.html
+++ b/cancion/vista4.html
@@ -604,7 +604,7 @@
 
 		<!-- Botones de acción -->
 		<div class="buttons-container">
-			<button class="btn" onclick="location.href='../principal/diseño.html'">
+			<button class="btn" onclick="location.href='../index.html'">
 				<span>←</span>
 				<span>Volver </span>
 			</button>
