--- a/perdon/vista.html
+++ b/perdon/vista.html
@@ -410,7 +410,7 @@
 		</div>
 
 		<div class="buttons-container">
-			<button class="btn" onclick="location.href='../principal/diseño.html'">
+			<button class="btn" onclick="location.href='../index.html'">
 				<span>←</span>
 				<span>Volver</span>
 			</button>
